1.0.0rc5
* WebUI: shows page generation time
* WebUI: fixed non-existing page tails

1.0.0rc4 - 2014-05-22
* secp256k1 uses precomputed constants instead of calculating them during initialization (wallet starts faster)
* Source files and packeges moved around like hell. Don't even ask, but it was a change for good.
* Btc: added API functions for HDWallets (see "wallethd.go")
* Wallet: you can add "seed" param to the config file, as a potential countermeasure against keyboard loggers
* Client: new TextUI commands ("arm", "unarm", "armed") help to secure your stealth addresses' scan-keys
* Client: the balance of all the wallets gets pre-cached while opening UTXO database
* Client: configuring "Memory.NoCacheBefore" can now lower mem usage with no much visible performance drop
* Client: "NoCacheBefore" can have a negative value, that will define an offset from the highest known block
* Client: More help topics in WebUI
* Further refactor of the code

0.9.14 - 2014-05-13 (1.0.0-rc2)
* Qdb: Uses malloc() and free() from libc, to optimize usage of system memory (skips garbage collector)
* Client: improved statistics page of WebUI and renamed from Stats to Counters
* Client: added new command "age" to TextUI

0.9.13 - 2014-05-10 (1.0.0-rc1)
* Huge refactor of the entire repo
* Support for stealth addresses
* Wallet: support for "-p" switch that forces asking for seed password
* Wallet: support for "-f" swicth, to exclude fee from the fist output's value
* Wallet: many other changes

0.9.10 (intermediate checkpoint tag)
* Client: an address listed more than once in a wallet gets removed (was showing wrong balance)
* Wallet: can generate a stealth address. Use "-scankey <key>". Uses the first private key for spend.

0.9.9 - 2014-04-30 *LAST_STABLE*
* Wallet: if you specify "-msg <text>" parameter it adds a null output with the text to the tx
* Client: fixed a crash when loading a transaction with an output that has no standard address